Edited composer file, added test configuration

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "keywords": [
         "zf2",
-        "akismet"
+        "windows",
+        "azure"
     ],
     "homepage": "http://packages.zendframework.com/",
     "license": "BSD-3-Clause",
@@ -13,7 +14,6 @@
             "ZendService": "library/"
         }
     },
-    "target-dir": "ZendService/WindowsAzure",
     "repositories": [
         {
             "type": "composer",
