--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "php": ">=5.3.3",
         "zendframework/zend-http": ">=2.0.0",
         "zendframework/zend-uri": ">=2.0.0",
-        "zendframework/zend-version": ">=2.0.0"
+        "zendframework/zend-version": ">=2.0.0",
+        "zendframework/zendxml": "dev-master"
     },
     "extra": {
         "branch-alias": {
